--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ torch==2.1.2
 transformers==4.36.2
 sentence-transformers==2.3.1
 scikit-learn==1.4.0
+joblib==1.5.2
 numpy==1.26.3
 pandas==2.1.4
 
