--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ DEBUG=True
 LOG_LEVEL="INFO"
 
 # CORS
-ALLOWED_ORIGINS="http://localhost:3000,http://localhost:3001"
+ALLOWED_ORIGINS="http://localhost:3000,http://localhost:3001,https://remote-work-frontend-flame.vercel.app"
 
 # Celery
 CELERY_BROKER_URL="redis://localhost:6379/0"
