--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,18 @@
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
-
-# Database
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
-alembic==1.13.1
-
-# AI/ML Libraries
-tensorflow==2.15.0
-torch==2.1.2
-transformers==4.36.2
-sentence-transformers==2.3.1
+uvicorn==0.27.0
+python-multipart==0.0.9
+python-dotenv==1.0.0
+requests==2.31.0
 scikit-learn==1.4.0
-joblib==1.5.2
+pandas==2.2.0
 numpy==1.26.3
-pandas==2.1.4
-
-# NLP
-spacy==3.7.2
-nltk==3.8.1
-
-# PDF Processing
-PyPDF2==3.0.1
-pdfplumber==0.10.3
-python-docx==1.1.0
-
-# Background Tasks
+joblib==1.3.2
+openai==1.10.0
+# tensorflow==2.15.0 # Reduce install size if only using sklearn models initially
+# torch==2.1.2 # Optional
 celery==5.3.6
 redis==5.0.1
-
-# HTTP Client
-httpx==0.26.0
-aiohttp==3.9.1
-
-# Utilities
-python-dotenv==1.0.0
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-
-# OpenAI (optional)
-openai==1.7.2
-
-# Vector DB
-pinecone-client==3.0.2
-# weaviate-client==4.4.1
-
-# Monitoring
-prometheus-client==0.19.0
-
-# Testing
-pytest==7.4.4
-pytest-asyncio==0.23.3
+pydantic==2.6.0
+pydantic-settings==2.1.0
+pytest==8.0.0
 httpx==0.26.0
